@@ -18,6 +18,7 @@
  */
 package barsuift.simLife.j2d.menu;
 
+import javax.swing.JFrame;
 import javax.swing.JMenu;
 import javax.swing.JMenuBar;
 import javax.swing.JMenuItem;
@@ -25,6 +26,7 @@ import javax.swing.JMenuItem;
 import barsuift.simLife.Application;
 import barsuift.simLife.j2d.action.AxisAction;
 import barsuift.simLife.j2d.action.FpsAction;
+import barsuift.simLife.j2d.action.HelpNavigationAction;
 import barsuift.simLife.j2d.action.NewEmptyAction;
 import barsuift.simLife.j2d.action.NewRandomAction;
 import barsuift.simLife.j2d.action.OpenAction;
@@ -39,6 +41,7 @@ public class MenuFactory {
         JMenuBar menuBar = new JMenuBar();
         menuBar.add(createFileMenu(application));
         menuBar.add(createWindowMenu(application));
+        menuBar.add(createHelpMenu(application.getMainWindow()));
         return menuBar;
     }
 
@@ -70,26 +73,37 @@ public class MenuFactory {
     }
 
     private JMenu createWindowMenu(Application application) {
-        JMenu adminMenu = new JMenu("Window");
-        adminMenu.setMnemonic(Mnemonics.WINDOW);
+        JMenu windowMenu = new JMenu("Window");
+        windowMenu.setMnemonic(Mnemonics.WINDOW);
 
         FpsAction fpsAction = new FpsAction(application);
         JMenuItem fpsItem = new JMenuItem(fpsAction);
-        adminMenu.add(fpsItem);
+        windowMenu.add(fpsItem);
 
         AxisAction axisAction = new AxisAction(application);
         JMenuItem axisItem = new JMenuItem(axisAction);
-        adminMenu.add(axisItem);
+        windowMenu.add(axisItem);
 
         ResetToOriginalViewAction resetOriginalViewAction = new ResetToOriginalViewAction(application);
         JMenuItem resetOriginalViewItem = new JMenuItem(resetOriginalViewAction);
-        adminMenu.add(resetOriginalViewItem);
+        windowMenu.add(resetOriginalViewItem);
 
         ResetToNominalViewAngleAction resetNominalViewAngleAction = new ResetToNominalViewAngleAction(application);
         JMenuItem resetNominalViewAngleItem = new JMenuItem(resetNominalViewAngleAction);
-        adminMenu.add(resetNominalViewAngleItem);
+        windowMenu.add(resetNominalViewAngleItem);
 
-        return adminMenu;
+        return windowMenu;
+    }
+
+    private JMenu createHelpMenu(JFrame parentWindow) {
+        JMenu helpMenu = new JMenu("Help");
+        helpMenu.setMnemonic(Mnemonics.HELP);
+
+        HelpNavigationAction helpNavAction = new HelpNavigationAction(parentWindow);
+        JMenuItem helpNavItem = new JMenuItem(helpNavAction);
+        helpMenu.add(helpNavItem);
+
+        return helpMenu;
     }
 
 }
